2000-04-05  Miguel de Icaza  <miguel@gnu.org>

	* parse-path.cP (parse_path): Invert the private/regular.  Thank
	god for the test suite.

2000-04-03  Miguel de Icaza  <miguel@gnu.org>

	* gnome-fileconvert.c (gfc_read_FileConverters): Do not depend on
	initialization sequence to run.

	* parse-path.cP (parse_path): Do not depend on the initialization sequence

1999-08-26  Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr>

	* gnome-mime.c (add_to_key): Duplicate the mime key here.

Mon Mar 20 19:40:50 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: we don't need to check the default for "C" locale
	  if we check the default after the loop.  This is in fact more
	  correct.

	* gnome-dentry.c: when saving names and comments, save them to the
	  default (no language) first just in case there was no setting,
	  fixes first part of #7300

Mon Mar 20 18:35:32 2000  George Lebl <jirka@5z.com>

	* gnome-config.c: fix segfault when loading illegal files by
	  correctly setting state after ignore.  also correctly set state
	  after premature end of line

	* gnome-dentry.c: just a minor documentation fix

2000-03-18  Miguel de Icaza  <miguel@helixcode.com>

	* gnome-config.c
	(_gnome_config_get_translated_string_with_default): Load a value
	if the translation is not available.  Fixes the desktop icons not
	working and the launchers dissapearing.

1999-08-26  Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr>

	* gnome-mime.c (add_to_key): Duplicate the mime key here.

2000-02-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-util.c (g_concat_dir_and_file): dir or file being NULL is
	an error.

Mon Feb 14 20:42:15 2000  Iain Holmes <ih@csd.abdn.ac.uk>

	* gnome-mime.c (gnome_mime_type_or_default): Check for an uppercase 
	version of the extension, then check for a lower case version as well
	as the requested on. An attempt to remove the need to .HTML and .html
	to exist in the gnome.mime file.

Mon Jan 17 13:59:59 2000  George Lebl <jirka@5z.com>
