@@ -1,3 +1,8 @@
+Sun Apr 30 22:44:55 2000  George Lebl <jirka@5z.com>
+
+	* gnome-config.c: when getting a bool, accept numbers as well, this
+	  is a patch from HEAD.
+
 2000-04-05  Miguel de Icaza  <miguel@gnu.org>
 
 	* parse-path.cP (parse_path): Invert the private/regular.  Thank
